# webp3

./: .gitignore  .gitlab-ci.yml  Containerfile  MANIFEST.in  README.md  README.rst  TODO.txt  app.py  app.wsgi  main.py  pyproject.toml  server.py  setup.py  webp3.py
apache/: install-webp3.md  install-webp3.rst  install-webp3.sh  webp3.conf
static/: base.tpl  player.js  style.css
sys/: base.tpl  player.js  style.css
webp3/: __main__.py  app.py  conf.py  exceptions.py  main_wsgi.py  pathutils.py  requestutils.py  webp3.wsgi
webp3/static/: COPYING.WTFPL  base.tpl  player.js  style.css
